--- a/react-dpl.yml
+++ b/react-dpl.yml
@@ -1,33 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: react-todo-deployment
+  name: jenkins-kubernetes-docker-react-deployment
   labels:
-    app: react-todo
+    app: jenkins-kubernetes-docker-react
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: react-todo
+      app: jenkins-kubernetes-docker-react
   template:
     metadata:
       labels:
-        app: react-todo
+        app: jenkins-kubernetes-docker-react
     spec:
       containers:
-      - name: react-todo
-        image: saisamarth21/react-todo:latest   
+      - name: jenkins-kubernetes-docker-react
+        image: saisamarth21/jenkins-kubernetes-docker-react:latest   
         ports:
         - containerPort: 4173
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: react-todo-service
+  name: jenkins-kubernetes-docker-react-service
 spec:
   type: NodePort
   selector:
-    app: react-todo
+    app: jenkins-kubernetes-docker-react
   ports:
   - protocol: TCP
     port: 80
